; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/ixgbe/extr_ixgbe_common.c_ixgbe_convert_bus_speed.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/ixgbe/extr_ixgbe_common.c_ixgbe_convert_bus_speed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@IXGBE_PCI_LINK_SPEED = common dso_local global i32 0, align 4
@ixgbe_bus_speed_2500 = common dso_local global i32 0, align 4
@ixgbe_bus_speed_5000 = common dso_local global i32 0, align 4
@ixgbe_bus_speed_8000 = common dso_local global i32 0, align 4
@ixgbe_bus_speed_unknown = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ixgbe_convert_bus_speed(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = load i32, i32* @IXGBE_PCI_LINK_SPEED, align 4
  %6 = and i32 %4, %5
  switch i32 %6, label %13 [
    i32 130, label %7
    i32 129, label %9
    i32 128, label %11
  ]

7:                                                ; preds = %1
  %8 = load i32, i32* @ixgbe_bus_speed_2500, align 4
  store i32 %8, i32* %2, align 4
  br label %15

9:                                                ; preds = %1
  %10 = load i32, i32* @ixgbe_bus_speed_5000, align 4
  store i32 %10, i32* %2, align 4
  br label %15

11:                                               ; preds = %1
  %12 = load i32, i32* @ixgbe_bus_speed_8000, align 4
  store i32 %12, i32* %2, align 4
  br label %15

13:                                               ; preds = %1
  %14 = load i32, i32* @ixgbe_bus_speed_unknown, align 4
  store i32 %14, i32* %2, align 4
  br label %15

15:                                               ; preds = %13, %11, %9, %7
  %16 = load i32, i32* %2, align 4
  ret i32 %16
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
